--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
 </head>
 <body>
 
-  <p>Hello, world</p>
-  <p>my first web page!</p>
+  <div>
+    <p>hello,<strong>ninjas</strong></p>
+    <p>my <small>first</small> web <em>page!</em></p>
+  </div>
+
+  <div>
+    <h1>heading 1</h1>
+    <h2>heading 2</h2>
+    <h3>heading 3</h3>
+    <h4>heading 4</h4>
+  </div>
+
+  <div>
+    <ul>
+      <li>yoshi</li>
+      <li>luigi</li>
+      <li>toad</li>
+    </ul>
+  </div>
+
+  <span>I am a span tag</span>
 
 </body>
 </html>
