<a href=""></a> some other tags which have self closing tag attributes: anchor tags - are used to create links to other pages or other websites. with a anchor tag you get a href which stands for hyperlink reference, and means 'what website do you want to go to when the user clicks the text inside this anchor tag.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <div>
     <p>hello,<strong>ninjas</strong></p>
     <p>my <small>first</small> web <em>page!</em></p>
+    <a href="https://www.twitter.com">the twitter website</a>
+    <a href="about.html">about page</a>
   </div>
 
   <div>
@@ -33,3 +35,5 @@
 
 </body>
 </html>
+
+<a href=""></a>
