<blockquote></blockquote> other tags that accept attributes is the blockquote tag which is used to quote something from another source or another website. then you can add a cite attribute to blockquote tag to be used to state where we got this information from, what was the original source. in the browser the blockquote is indented to the right from the side of the page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
   <img src="img/ninja.jpg" alt="a picture of a ninja ">
 
+  <blockquote cite="http://oscarwildsite.com">
+    we are all in the gutter, but some of us are looking at the stars
+  </blockquote>
+
 </body>
 </html>
-
-<a href=""></a>
