one more attribute on a p tag: style...now we're venturing into css here (more later) inside the style attribute we can say what the text should look like using a bit of css syntax.

--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
     we are all in the gutter, but some of us are looking at the stars
   </blockquote>
 
+  <p style="color:orange"> style me :)</p>
+
 </body>
 </html>
