--- a/index.html
+++ b/index.html
@@ -1,44 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Learning HTML</title>
+  <title>HTML Forms</title>
 </head>
 <body>
 
-  <div>
-    <p>hello,<strong>ninjas</strong></p>
-    <p>my <small>first</small> web <em>page!</em></p>
-    <a href="https://www.twitter.com">the twitter website</a>
-    <a href="about.html">about page</a>
-  </div>
+  <h1>HTML Forms</h1>
 
-  <div>
-    <h1>heading 1</h1>
-    <h2>heading 2</h2>
-    <h3>heading 3</h3>
-    <h4>heading 4</h4>
-  </div>
+  <form>
+    <label for="username">enter username:</label>
+    <input type="text" id="username" name="username">
+    <br><br>
+    <label for="email">enter email</label>
+    <input type="email" id="email" name="email">
+    <br><br>
+    <label for="password">password:</label>
+    <input type="password" id="password" name="password">
 
-  <div>
-    <ul>
-      <li>yoshi</li>
-      <li>luigi</li>
-      <li>toad</li>
-    </ul>
-  </div>
+    <p>Select your age:</p>
 
-  <!-- span tag below -->
-  <span>I am a <br>span tag</span>
+    <input type="radio" name="age" value="0-25" id="option-1">
+    <label for="option-1">0-25</label>
+    <input type="radio" name="age" value="26-50" id="option-2">
+    <label for="option-2">26-50</label>
+    <input type="radio" name="age" value="51+" id="option-3">
+    <label for="option-3">51+</label>
 
-  <hr>
+  </form>
 
-  <img src="img/ninja.jpg" alt="a picture of a ninja ">
-
-  <blockquote cite="http://oscarwildsite.com">
-    we are all in the gutter, but some of us are looking at the stars
-  </blockquote>
-
-  <p style="color:orange"> style me :)</p>
 
 </body>
 </html>
