--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
   <form>
     <label for="username">enter username:</label>
-    <input type="text" id="username" name="username">
+    <input type="text" id="username" name="username" placeholder="username" required>
     <br><br>
     <label for="email">enter email</label>
-    <input type="email" id="email" name="email">
+    <input type="email" id="email" name="email" placeholder="your email" required>
     <br><br>
     <label for="password">password:</label>
-    <input type="password" id="password" name="password">
+    <input type="password" id="password" name="password" placeholder="choose a password" required>
 
     <p>Select your age:</p>
 
@@ -25,6 +25,27 @@
     <label for="option-2">26-50</label>
     <input type="radio" name="age" value="51+" id="option-3">
     <label for="option-3">51+</label>
+
+    <br><br>
+
+    <label for="question">Security question</label>
+    <select name="question" id="question">
+        <option value="q1">What colour are your favourite pair of socks?</option>
+        <option value="q2">If you could be a vegetable, what would it be?</option>
+        <option value="q3">What is your best ever security question?</option>
+    </select>
+
+    <br> <br>
+    <label for="answer">Security question answer:</label>
+    <input type="text" id="answer" name="answer">
+
+    <br> <br>
+    <label for="bio">Your bio:</label><br>
+    <textarea name="bio" id="bio" cols="30" rows="10" placeholder="about you..."></textarea>
+
+    <br> <br>
+
+    <input type="submit" value="submit the form">
 
   </form>
 
