css basics - starting docs

--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Learning HTML</title>
+  <title>CSS Basics</title>
 </head>
 <body>
 
-  <h2>about us</h2>
+  <h1>About me</h1>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, numquam! Laudantium voluptas officia illum, minus quo eos cupiditate inventore? Harum modi quod qui quis id nihil doloribus earum perferendis eveniet?</p>
 
 </body>
 </html>
