cumbersome to add styles in the html file if you have a lot of pages. preferrable create an external stylesheet then put all the css rules inside the style sheet and then just link to that from each page that uses them. then if we have to update them we can do it all in one place.

--- a/about.html
+++ b/about.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+      h1 {
+        color: orange;
+      }
+      p {
+        color: slategray;
+      }
+      </style>
   <title>CSS Basics</title>
 </head>
 <body>
