created a file called styles.css, add styles, then use the link tag within the html files and add the styles.css path name.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-      h1 {
-        color: orange;
-      }
-      p {
-        color: slategray;
-      }
-    </style>
+  <link rel="stylesheet" href="styles.css">
   <title>CSS Basics</title>
 </head>
 <body>
