basic declarations inside a css selector that we can use: background-color, font-size, text-decoration (line-through, underline, none if we have anchor tags since they have a default underline), font-family (make sure its a web safe font), text-align. next selector, p tags: line-height (space between each line), letter-spacing (space between each individual letter), column-count(newspaper like design), column-gap. Moving on to a different element: ul - border-width + border-style (border-width by itself won't don't anything b/c borders are made up of different parts and we need at least 2 of those parts to show properly). The ul is going accross all the way to the end of the page because this is a block level element; border color.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
   <h1>CSS Basics</h1>
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque laudantium blanditiis animi saepe tempore eius voluptates mollitia officiis, autem quas eos nisi. Dolores obcaecati non quasi dolorem officiis impedit commodi!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque laudantium blanditiis animi saepe tempore eius voluptates mollitia officiis, autem quas eos nisi. Dolores obcaecati non quasi dolorem officiis impedit commodi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi commodi reiciendis blanditiis sed ad eligendi minus in ratione perspiciatis distinctio eaque impedit ab similique, unde accusantium. Sit laboriosam iusto eos.</p>
 
   <div>
     <h2>Ninjas available for hire</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quasi magnam ut sunt ullam enim, blanditiis maiores, porro alias totam quo excepturi numquam aperiam magni molestiae? Omnis earum recusandae velit!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quasi magnam ut sunt ullam enim, blanditiis maiores, porro alias totam quo excepturi numquam aperiam magni molestiae? Omnis earum recusandae velit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur ad error molestias saepe expedita vero illo eligendi accusamus! Provident saepe, dolore sint illum modi consequuntur necessitatibus culpa ducimus quam totam? </p>
     <ul>
       <li>Ninja Yoshi</li>
       <li>Ninja Mario</li>
