--- a/index.html
+++ b/index.html
@@ -5,24 +5,21 @@
   <title>CSS Basics</title>
 </head>
 <body>
+  <div>
 
-  <h2>Inline elements</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem omnis aliquam, nulla voluptates non et architecto corrupti explicabo itaque laborum eum sint hic provident sapiente, cum, doloribus obcaecati. Similique, ad!</p>
 
-  <span>span tag</span>
-  <em>em tag</em>
-  <a href="">anchor tag</a>
-  <span>span tag</span>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, laboriosam officiis eligendi similique quas quidem architecto eaque delectus harum assumenda iusto ut voluptas ea magnam velit voluptatibus, dolorum unde nemo.</p>
 
-  <h2>Block-level elements</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem provident et blanditiis eum culpa harum nihil quos, eos sequi atque consequuntur est enim, in sit ducimus doloribus! Sequi, deserunt consectetur?</p>
 
-  <div>div tag</div>
-  <div>another div tag</div>
-  <h3>h3 tag</h3>
-  <p>paragraph tag</p>
-  <ul>
-    <li>li tag</li>
-    <li>another li tag</li>
-  </ul>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veritatis animi est fugiat nulla in dolores impedit quas id! Perferendis necessitatibus modi consectetur libero, quibusdam enim repellendus dolorum nemo eveniet?</p>
+
+
+  </div>
+
+  <a href="https://www.thenetninja.co.uk">the best site on the web</a>
+  <a href="https://www.google.com">google website</a>
 
 </body>
 </html>
