CSS Classes & Selectors - we always start with a dot/period when we're styling for a selector with a class name. we can add the same class to many different elements on a page. multiple classes all with quotes. this is how we use these classes to reach in and select elements from our html to style them

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem omnis aliquam, nulla voluptates non et architecto corrupti explicabo itaque laborum eum sint hic provident sapiente, cum, doloribus obcaecati. Similique, ad!</p>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, laboriosam officiis eligendi similique quas quidem architecto eaque delectus harum assumenda iusto ut voluptas ea magnam velit voluptatibus, dolorum unde nemo.</p>
+    <p class="error">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, laboriosam officiis eligendi similique quas quidem architecto eaque delectus harum assumenda iusto ut voluptas ea magnam velit voluptatibus, dolorum unde nemo.</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem provident et blanditiis eum culpa harum nihil quos, eos sequi atque consequuntur est enim, in sit ducimus doloribus! Sequi, deserunt consectetur?</p>
+    <p class="success">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem provident et blanditiis eum culpa harum nihil quos, eos sequi atque consequuntur est enim, in sit ducimus doloribus! Sequi, deserunt consectetur?</p>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veritatis animi est fugiat nulla in dolores impedit quas id! Perferendis necessitatibus modi consectetur libero, quibusdam enim repellendus dolorum nemo eveniet?</p>
+    <p class="success feedback">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veritatis animi est fugiat nulla in dolores impedit quas id! Perferendis necessitatibus modi consectetur libero, quibusdam enim repellendus dolorum nemo eveniet?</p>
 
 
   </div>
+
+  <div class="error">I am an error</div>
 
   <a href="https://www.thenetninja.co.uk">the best site on the web</a>
   <a href="https://www.google.com">google website</a>
