CSS Classes & Selectors - id's: can be used as hooks just like classes but are more commonly used in js. they're are more specific. one constraint that id's have is that you can only use one id of a certain name on each page. all id names must be unique. so i could use the id="content" again on the page if i've already used it once.another way to be more specific with what elements we want to style is by using descendance selctors = means we can target children inside a parent element. parent goes on the left and the child on the right, could do this several layers deep. attribute selectors - a[href], a[href*="thenetninja]...are a good way to target elements with specific attributes that also have specifc value

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>CSS Basics</title>
 </head>
 <body>
-  <div>
+  <div id="content">
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem omnis aliquam, nulla voluptates non et architecto corrupti explicabo itaque laborum eum sint hic provident sapiente, cum, doloribus obcaecati. Similique, ad!</p>
 
@@ -18,10 +18,13 @@
 
   </div>
 
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias tempora hic sequi itaque asperiores unde dolore, quibusdam veritatis, optio porro fuga sed, facilis enim consequatur perferendis distinctio et earum quasi.</p>
+
   <div class="error">I am an error</div>
 
   <a href="https://www.thenetninja.co.uk">the best site on the web</a>
   <a href="https://www.google.com">google website</a>
+  <a href="https://www.thenetninja.co.uk">the best site on the web</a>
 
 </body>
 </html>
