cascade - inheritance/specifity - html elements can inherit css properties that are applied to their parents that then can passes down to the children. normally only font styles, colors, fonts that are inherited not things like margin, padding, background style, borders... if as a child from a parent we want to inherit something from the parent that isn't automatically inherited how would we do that? easy - in the css child selector add the parent properties and next to them add 'inherit' and they will inherit the properties from the parent. we can also overite the color from the parent and choose a different color and this will work b/c of specificity. if further down i decide to style the p tag another color, say orange, then that will take precendence b/c it is further down.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="content">
-
+gfgfgfgf
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem omnis aliquam, nulla voluptates non et architecto corrupti explicabo itaque laborum eum sint hic provident sapiente, cum, doloribus obcaecati. Similique, ad!</p>
 
     <p class="error">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, laboriosam officiis eligendi similique quas quidem architecto eaque delectus harum assumenda iusto ut voluptas ea magnam velit voluptatibus, dolorum unde nemo.</p>
