--- a/index.html
+++ b/index.html
@@ -2,29 +2,11 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
-  <title>CSS Basics</title>
+  <title>Marioclub</title>
 </head>
 <body>
-  <div id="content">
-gfgfgfgf
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem omnis aliquam, nulla voluptates non et architecto corrupti explicabo itaque laborum eum sint hic provident sapiente, cum, doloribus obcaecati. Similique, ad!</p>
-
-    <p class="error">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, laboriosam officiis eligendi similique quas quidem architecto eaque delectus harum assumenda iusto ut voluptas ea magnam velit voluptatibus, dolorum unde nemo.</p>
-
-    <p class="success">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem provident et blanditiis eum culpa harum nihil quos, eos sequi atque consequuntur est enim, in sit ducimus doloribus! Sequi, deserunt consectetur?</p>
-
-    <p class="success feedback">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus veritatis animi est fugiat nulla in dolores impedit quas id! Perferendis necessitatibus modi consectetur libero, quibusdam enim repellendus dolorum nemo eveniet?</p>
 
 
-  </div>
-
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias tempora hic sequi itaque asperiores unde dolore, quibusdam veritatis, optio porro fuga sed, facilis enim consequatur perferendis distinctio et earum quasi.</p>
-
-  <div class="error">I am an error</div>
-
-  <a href="https://www.thenetninja.co.uk">the best site on the web</a>
-  <a href="https://www.google.com">google website</a>
-  <a href="https://www.thenetninja.co.uk">the best site on the web</a>
 
 </body>
 </html>
