html semantics - added html for marioclub project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,43 @@
 </head>
 <body>
 
-
+<header>
+  <h1>Marioclub</h1>
+</header>
+<section class="banner">
+  <img src="img/banner.png" alt="marioclub welcome banner">
+  <div class="welcome">
+    <h2>Welcome to <br><span>Marioclub</span></h2>
+  </div>
+</section>
+<nav class="main-nav">
+  <ul>
+    <li><a href="/join.html" class="join">Join the club</a></li>
+    <li><a href="/news.html">Latest news</a></li>
+    <li><a href="/games.html">New games</a></li>
+    <li><a href="/contact.html">Contact</a></li>
+  </ul>
+</nav>
+<main>
+  <article>
+    <h2>It's a me, Mario</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem rerum non amet aliquam porro nisi distinctio repellendus nulla, suscipit minus ratione temporibus minima aspernatur eveniet unde error cum dolorem sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis maiores, ratione culpa consequuntur delectus expedita sed laboriosam. Recusandae sed similique deleniti fugiat at asperiores eligendi porro. Nulla quaerat velit dolor?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque eos quam debitis expedita ullam dicta illo eius est doloremque numquam velit earum non asperiores ex, quia enim unde voluptate culpa.</p>
+  </article>
+  <ul class="images">
+    <li><img src="img/thumb-1.png" alt="mario thumb 1"></li>
+    <li><img src="img/thumb-2.png" alt="mario thumb 2"></li>
+  </ul>
+</main>
+<section class="join">
+  <h2>Join Today</h2>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea nemo voluptatum nesciunt, quisquam commodi illo esse, reprehenderit similique.</p>
+  <form>
+    <input type="email" name="email" placeholder="Type email & hit enter" required>
+  </form>
+</section>
+<footer>
+  <p class="copyright">Copyright 2019 Marioclub</p>
+</footer>
 
 </body>
 </html>
